# Subversion:
# $Revision: 515 $
# $Author: oertel $
# $Date: 2016-11-09 15:06:33 +0100 (Mi, 09 Nov 2016) $
#***************************************************************************

todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################


opsi-winst/opsi-script (4.12.0.0) experimental; urgency=low

  * new unit osdefinedfunctions
  * osparser: support for defined functions
  * osparser: moved sync between FExtremeErrorLevel and extremeErrorLevel before final output
  * osparser: new functions: boolToString(<bool expression>) and stringToBool(< string>)
  * osparser: new statement: ImportLib
  * oslog: new method log_prog for program debugging
  * osconf: readConfigFromService reads configstates:
     opsi-script.global.debug_prog : boolean ; if true log log_prog if > LLWarning
     opsi-script.global.debug_lib : boolean ; if true log libraries if > LLWarning
     opsi-script.global.default_loglevel : intstring ; set the default loglevel
     opsi-script.global.force_min_loglevel : intstring ; set the minimal loglevel
  * osmain: if /productid is set then use it also for the log
  * opsihwbiosInfo: typo Manufacturer ; fixes #2994

-- Detlef Oertel <d.oertel@uib.de>  Mon, 19 Jun 2017:15:00:00 +0200



opsi-winst/opsi-script (4.11.6.14) stable; urgency=low

  * osparser: isNumber: now check against int64
  * osparser: new file section copy option -h (follow symlinks; default=false)
  * osfunc: support for followsymlinks:
    FileInstall.AllCopy: AllCopy Recursive: ToCopyOrNotCopy
    filecopy  : fixes #2537
    Files section copy: -s : does not follow symlinks but copy the symlink files
    copy -h : follow symlinks

-- Detlef Oertel <d.oertel@uib.de>  Thu, 29 Jun 2017:15:00:00 +0200

opsi-winst/opsi-script (4.11.6.13) stable; urgency=low

  * oswebservice: typo: lastcation