@@ -396,8 +396,9 @@
       </Unit26>
       <Unit27>
         <Filename Value="changelog.txt"/>
+        <IsVisibleTab Value="True"/>
         <TopLine Value="7"/>
-        <CursorPos X="26" Y="18"/>
+        <CursorPos Y="17"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -492,7 +493,7 @@
         <CursorPos X="3" Y="5392"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
-          <EditorIndex Value="2"/>
+          <EditorIndex Value="-1"/>
           <WindowIndex Value="1"/>
           <TopLine Value="738"/>
           <CursorPos X="3" Y="782"/>
@@ -522,16 +523,16 @@
       <Unit40>
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="15287"/>
-        <CursorPos X="45" Y="15291"/>
+        <TopLine Value="6148"/>
+        <CursorPos X="65" Y="6173"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
-          <EditorIndex Value="3"/>
-          <TopLine Value="6148"/>
-          <CursorPos X="65" Y="6173"/>
+          <IsVisibleTab Value="True"/>
+          <EditorIndex Value="-1"/>
+          <WindowIndex Value="1"/>
+          <TopLine Value="15287"/>
+          <CursorPos X="45" Y="15291"/>
         </ExtraEditor1>
         <UsageCount Value="209"/>
         <Loaded Value="True"/>
@@ -560,18 +561,17 @@
       <Unit42>
         <Filename Value="osfuncwin.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="342"/>
-        <CursorPos X="22" Y="343"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="7"/>
+        <CursorPos X="14" Y="30"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="7"/>
-          <CursorPos X="14" Y="30"/>
+          <WindowIndex Value="1"/>
+          <TopLine Value="342"/>
+          <CursorPos X="22" Y="343"/>
         </ExtraEditor1>
         <UsageCount Value="204"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit42>
       <Unit43>
@@ -622,12 +622,11 @@
       <Unit48>
         <Filename Value="opsihwbiosinfo.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="754"/>
         <CursorPos X="41" Y="771"/>
         <UsageCount Value="207"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit48>
       <Unit49>
@@ -916,6 +915,7 @@
         <CursorPos Y="1279"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
+          <EditorIndex Value="-1"/>
           <WindowIndex Value="1"/>
           <TopLine Value="225"/>
           <CursorPos X="66" Y="193"/>
@@ -927,10 +927,9 @@
       <Unit82>
         <Filename Value="..\common\oswebservice.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="2958"/>
-        <CursorPos X="53" Y="2969"/>
+        <TopLine Value="1731"/>
+        <CursorPos X="58" Y="1745"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -1050,124 +1049,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="683" Column="55" TopLine="648"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="5952" Column="51" TopLine="5935"/>
       </Position1>
       <Position2>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="1663" Column="33" TopLine="1628"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="6001" Column="51" TopLine="5983"/>
       </Position2>
       <Position3>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="246" Column="27" TopLine="225"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="6043" Column="51" TopLine="6026"/>
       </Position3>
       <Position4>
         <Filename Value="osparser.pas"/>
-        <Caret Line="16036" Column="11" TopLine="16016"/>
+        <Caret Line="6088" Column="47" TopLine="6071"/>
       </Position4>
       <Position5>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6120" Column="13" TopLine="6104"/>
+        <Caret Line="6592" Column="45" TopLine="6575"/>
       </Position5>
       <Position6>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6119" Column="51" TopLine="6103"/>
-      </Position6>
-      <Position7>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="5952" Column="51" TopLine="5935"/>
-      </Position7>
-      <Position8>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6000" Column="51" TopLine="5983"/>
-      </Position8>
-      <Position9>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="5952" Column="51" TopLine="5935"/>
-      </Position9>
-      <Position10>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6001" Column="51" TopLine="5983"/>
-      </Position10>
-      <Position11>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6043" Column="51" TopLine="6026"/>
-      </Position11>
-      <Position12>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6088" Column="47" TopLine="6071"/>
-      </Position12>
-      <Position13>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6592" Column="45" TopLine="6575"/>
-      </Position13>
-      <Position14>
         <Filename Value="osmain.pas"/>
         <Caret Line="2005" Column="30" TopLine="1979"/>
-      </Position14>
-      <Position15>
+      </Position6>
+      <Position7>
         <Filename Value="osmain.pas"/>
         <Caret Line="1874" Column="44" TopLine="1853"/>
-      </Position15>
-      <Position16>
+      </Position7>
+      <Position8>
         <Filename Value="..\common\oswebservice.pas"/>
         <Caret Line="1233" Column="22" TopLine="1177"/>
-      </Position16>
-      <Position17>
+      </Position8>
+      <Position9>
         <Filename Value="..\common\oswebservice.pas"/>
         <Caret Line="628" Column="36" TopLine="606"/>
+      </Position9>
+      <Position10>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="645" Column="32" TopLine="611"/>
+      </Position10>
+      <Position11>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="2911" Column="35" TopLine="2909"/>
+      </Position11>
+      <Position12>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="2955" Column="18" TopLine="2934"/>
+      </Position12>
+      <Position13>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="2978" Column="18" TopLine="2957"/>
+      </Position13>
+      <Position14>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="3029" Column="18" TopLine="3008"/>
+      </Position14>
+      <Position15>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="2950" Column="42" TopLine="2932"/>
+      </Position15>
+      <Position16>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="6628" Column="49" TopLine="6611"/>
+      </Position16>
+      <Position17>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="15316" Column="39" TopLine="15299"/>
       </Position17>
       <Position18>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="645" Column="32" TopLine="611"/>
+        <Caret Line="2967" Column="56" TopLine="2932"/>
       </Position18>
       <Position19>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2911" Column="35" TopLine="2909"/>
+        <Caret Line="2978" Column="18" TopLine="2957"/>
       </Position19>
       <Position20>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2955" Column="18" TopLine="2934"/>
+        <Caret Line="3029" Column="18" TopLine="3008"/>
       </Position20>
       <Position21>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2978" Column="18" TopLine="2957"/>
+        <Caret Line="2973" Column="40" TopLine="2957"/>
       </Position21>
       <Position22>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="3029" Column="18" TopLine="3008"/>
+        <Caret Line="2969" Column="53" TopLine="2958"/>
       </Position22>
       <Position23>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2911" Column="21" TopLine="2917"/>
+        <Caret Line="1764" Column="81" TopLine="1744"/>
       </Position23>
       <Position24>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2950" Column="42" TopLine="2932"/>
+        <Caret Line="1735" Column="36" TopLine="1714"/>
       </Position24>
       <Position25>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6628" Column="49" TopLine="6611"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="1737" Column="32" TopLine="1714"/>
       </Position25>
       <Position26>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="15316" Column="39" TopLine="15299"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="1841" Column="51" TopLine="1827"/>
       </Position26>
       <Position27>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2967" Column="56" TopLine="2932"/>
+        <Caret Line="1826" Column="36" TopLine="1805"/>
       </Position27>
       <Position28>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2978" Column="18" TopLine="2957"/>
+        <Caret Line="1926" Column="39" TopLine="1952"/>
       </Position28>
       <Position29>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="3029" Column="18" TopLine="3008"/>
+        <Caret Line="2186" Column="40" TopLine="2166"/>
       </Position29>
       <Position30>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="2973" Column="40" TopLine="2957"/>
+        <Caret Line="2195" Column="39" TopLine="1898"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
